--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,165 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container_b {
+  --uib-size: 60px;
+  --uib-color: #00a36c;
+  --uib-speed: 1.4s;
+  --uib-stroke: 5px;
+  --uib-bg-opacity: 0.1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--uib-stroke);
+  width: var(--uib-size);
+  border-radius: calc(var(--uib-stroke) / 2);
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container_b::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--uib-color);
+  opacity: var(--uib-bg-opacity);
+  transition: background-color 0.3s ease;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.container_b::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  border-radius: calc(var(--uib-stroke) / 2);
+  animation: zoom var(--uib-speed) ease-in-out infinite;
+  transform: translateX(-100%);
+  background-color: var(--uib-color);
+  transition: background-color 0.3s ease;
+}
+
+@keyframes zoom {
+  0% {
+    transform: translateX(-100%);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateX(100%);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+/* hourglass loading */
+.container_h {
+  --uib-size: 45px;
+  --uib-color: black;
+  --uib-speed: 1.75s;
+  --uib-bg-opacity: 0.1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: var(--uib-size);
+  width: var(--uib-size);
+  transform: rotate(45deg);
+  animation: rotate calc(var(--uib-speed) * 2) ease-in-out infinite;
+}
+
+.half {
+  --uib-half-size: calc(var(--uib-size) * 0.435);
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: var(--uib-half-size);
+  height: var(--uib-half-size);
+  overflow: hidden;
+  isolation: isolate;
+
+  &:first-child {
+    top: 8.25%;
+    left: 8.25%;
+    border-radius: 50% 50% calc(var(--uib-size) / 15);
+  }
+
+  &:last-child {
+    bottom: 8.25%;
+    right: 8.25%;
+    transform: rotate(180deg);
+    align-self: flex-end;
+    border-radius: 50% 50% calc(var(--uib-size) / 15);
+
+    &::after {
+      animation-delay: calc(var(--uib-speed) * -1);
+    }
+  }
+
+  &::before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--uib-color);
+    opacity: var(--uib-bg-opacity);
+    transition: background-color 0.3s ease;
+  }
+
+  &::after {
+    content: "";
+    position: relative;
+    z-index: 1;
+    display: block;
+    background-color: var(--uib-color);
+    height: 100%;
+    transform: rotate(45deg) translate(-3%, 50%) scaleX(1.2);
+    width: 100%;
+    transform-origin: bottom right;
+    border-radius: 0 0 calc(var(--uib-size) / 20) 0;
+    animation: flow calc(var(--uib-speed) * 2) linear infinite both;
+    transition: background-color 0.3s ease;
   }
 }
 
-.card {
-  padding: 2em;
+@keyframes flow {
+  0% {
+    transform: rotate(45deg) translate(-3%, 50%) scaleX(1.2);
+  }
+  30% {
+    transform: rotate(45deg) translate(115%, 50%) scaleX(1.2);
+  }
+
+  30.001%,
+  50% {
+    transform: rotate(0deg) translate(-85%, -85%) scaleX(1);
+  }
+
+  80%,
+  100% {
+    transform: rotate(0deg) translate(0%, 0%) scaleX(1);
+  }
 }
 
-.read-the-docs {
-  color: #888;
+@keyframes rotate {
+  0%,
+  30% {
+    transform: rotate(45deg);
+  }
+
+  50%,
+  80% {
+    transform: rotate(225deg);
+  }
+
+  100% {
+    transform: rotate(405deg);
+  }
+}
+
+/*  */
+.sticky-div {
+  position: sticky;
+  top: 50px; /* Same as the height of the navbar */
+  background-color: #f8f9fa;
+  padding: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Optional box shadow */
+  z-index: 900; /* Ensure it stays below the navbar */
 }
