--- a/client/src/components/Add/Add.css
+++ b/client/src/components/Add/Add.css
@@ -1,7 +1,7 @@
 .container-add {
   margin-top: 7vh;
-  background-color: #333333;
-  color: white;
+  /* background-color: #333333; */
+  /* color: white; */
   max-width: 500px;
   height: 93vh;
   padding: 30px;
