--- a/client/src/App.css
+++ b/client/src/App.css
@@ -163,3 +163,17 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Optional box shadow */
   z-index: 900; /* Ensure it stays below the navbar */
 }
+
+.container-add {
+  margin-top: 7vh;
+  /* background-color: #333333; */
+  /* color: white; */
+  max-width: 500px;
+  height: 93vh;
+  padding: 30px;
+}
+
+.recharts-wrapper *:focus {
+  outline: none;
+  box-shadow: none;
+}
