--- a/client/src/App.css
+++ b/client/src/App.css
@@ -191,3 +191,14 @@
   outline: none;
   box-shadow: none;
 }
+
+.clickable-div {
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.clickable-div.clicked {
+  background-color: #e7e6e6;
+  /* border: 3px solid darkred; */
+  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
+}
